# EPITECH-Panoramix

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  doxide.yaml
.github/workflows/: cicd.yml
assets/icons/: credits.txt
includes/: env.h  garbage.h  headers.h  includes.h  logging.h  m_lists.h  project.h  smart_pointers.h  types.h
src/: env.c  garbage.c  logging.c  m_lists.c  main.c  parsing.c  smart_pointers.c  village.c  villagers.c
tests/: CMakeLists.txt  run_unit_tests.sh  tests.cpp
